# Void

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  release-plz.toml
.cargo/: config.toml
.github/workflows/: build-binaries.yml  ci.yml  packaging.yml  publish.yml  reusable-build.yml
docs/: roadmap-and-packaging.md
manifests/p/p6laris/Void/0.3.0-alpha.1/: p6laris.Void.yaml
packaging/homebrew/: void.rb
src/: canvas_timer.rs  date.rs  lib.rs  main.rs  model.rs  sound.rs  storage.rs  timer.rs
src/app/: keys.rs  mod.rs  popups.rs  settings.rs  state.rs  task_ops.rs  timer_ops.rs
src/db/: encoding.rs  export.rs  import_export.rs  mod.rs  schema.rs  sessions.rs
src/theme/: builtin.rs  catalog.rs  color.rs  file.rs  mod.rs  tokens.rs
src/ui/: about.rs  calendar.rs  chrome.rs  dashboard.rs  heatmap.rs  help.rs  icons.rs  mod.rs  popups.rs  settings.rs  stats.rs  tasks.rs  widgets.rs  zen.rs
themes/: catppuccin-latte.toml  catppuccin-mocha.toml
