[package]
name = "void-focus"
version = "0.4.0-beta.1"
edition = "2021"
authors = ["Void Contributors"]
description = "A feature-rich terminal focus timer with task tracking"
license = "MIT"
repository = "https://github.com/p6laris/Void"
homepage = "https://github.com/p6laris/Void"
readme = "README.md"
keywords = ["pomodoro", "focus", "timer", "terminal", "tui"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/", "docs/", "assets/", ".idea/", "packaging/"]

[lib]
name = "void"
path = "src/lib.rs"

[[bin]]
name = "void"
path = "src/main.rs"

[dependencies]
ratatui = "0.30.1"
crossterm = "0.29.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "6.0.0"
unicode-width = "0.2.2"
notify-rust = "4.11"
rusqlite = { version = "0.40.1", features = ["bundled"] }
nerd-font-symbols = "0.3.0"
toml = "0.8"
time = "0.3.47"
rodio = "0.19.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.186"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
